--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,9 @@
-body {
+@font-face{
+  font-family: 'Simpsons';
+  src: url('../font/akbar.ttf')
+}
+
+html {
+  font-family: 'Simpsons';
   margin: 15px;
 }
